# rust-opencv-sys

./: Cargo.toml  LICENSE.md  README.md  build.rs
src/: core.rs  highgui.rs  imgproc.rs  lib.rs  photo.rs
